fix: Align header using flex-box

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
-  font-family: monospace;
+  font-family: "Times New Roman", serif;
+  font-weight: bold;
   background: papayawhip;
+
+  display: flex; padding: 10px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +19,9 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+
+  display: flex; gap: 10px;
+  padding: 0;
 }
 
 a {
